Bug 335732 - (Frameworks) Unable to close dolphin window when there are more tabs opened
Summary: (Frameworks) Unable to close dolphin window when there are more tabs opened
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-02 22:53 UTC by Hrvoje Senjan
Modified: 2014-09-02 12:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2014-06-02 22:53:26 UTC
Well, at least via close button ;-)

Reproducible: Always

Steps to Reproduce:
1. Open dolphin
2. Open a new tab
3. Try to close dolphin
Actual Results:  
Nothing happens

Expected Results:  
Window should close
Comment 1 Frank Reininghaus 2014-06-03 19:45:32 UTC
I can confirm the problem, thanks for reporting it!

I actually have a step 4 though: Click "OK" in the confirmation dialog. Can you confirm that, or do you not get a confirmation dialog at all?

Proposed fix is at https://git.reviewboard.kde.org/r/118508/
Comment 2 Hrvoje Senjan 2014-06-03 20:02:36 UTC
(In reply to comment #1)
> I can confirm the problem, thanks for reporting it!
> 
> I actually have a step 4 though: Click "OK" in the confirmation dialog. Can
> you confirm that, or do you not get a confirmation dialog at all?
Yes, i get the dialog, just i forgot to mention it ;-)
(also 'Close current tab' does nothing)

> Proposed fix is at https://git.reviewboard.kde.org/r/118508/
will be testing
Comment 3 Hrvoje Senjan 2014-06-03 20:50:24 UTC
i can confirm that the patch fixes the bug here also =)
thanks for the quick fix!
Comment 4 Frank Reininghaus 2014-06-04 19:59:45 UTC
Git commit 40599aaa3f4aeee9293acc692a08e839f4140d04 by Frank Reininghaus.
Committed on 04/06/2014 at 19:56.
Pushed by freininghaus into branch 'frameworks'.

Make Dolphin windows with multiple tabs closable

The return type and return values of KMessageBox::createKMessageBox()
have changed in KF5. We have to adjust the code
in DolphinMainWindow::closeEvent(QCloseEvent* event) in order to make
windows with multiple tabs closable.
REVIEW: 118508

M  +2    -2    dolphin/src/dolphinmainwindow.cpp

http://commits.kde.org/kde-baseapps/40599aaa3f4aeee9293acc692a08e839f4140d04
Comment 5 Frank Reininghaus 2014-06-04 20:00:35 UTC
(In reply to comment #3)
> i can confirm that the patch fixes the bug here also =)

Great :-)

> thanks for the quick fix!

Thanks for testing it!
Comment 6 Veaceslav Munteanu 2014-09-02 12:15:56 UTC
Git commit 6d42545beedb26715220a4417aa7b5558b61acd9 by Veaceslav Munteanu.
Committed on 02/09/2014 at 12:13.
Pushed by munteanu into branch 'master'.

M  +2    -1    NEWS
M  +18   -15   digikam/tags/tagsmanager/tagsmanager.cpp

http://commits.kde.org/digikam/6d42545beedb26715220a4417aa7b5558b61acd9
Comment 7 Veaceslav Munteanu 2014-09-02 12:17:28 UTC
I'm sorry I messed up BUG number :D

This commit is not related to this bug !
Comment 8 Frank Reininghaus 2014-09-02 12:25:09 UTC
(In reply to Veaceslav Munteanu from comment #7)
> I'm sorry I messed up BUG number :D
> 
> This commit is not related to this bug !

Okay, but there is no reason to reopen this bug (which has been fixed months ago). Closing again.