Make Dolphin windows with multiple tabs closable

The return type and return values of KMessageBox::createKMessageBox()
have changed in KF5. We have to adjust the code
in DolphinMainWindow::closeEvent(QCloseEvent* event) in order to make
windows with multiple tabs closable.

BUG: 335732
REVIEW: 118508